Implement sigterm handling logic (#369)
Implements the actual logic to handle sigterms from k8s.

Specifically, a termination handler is implemented which sends a
Put Shutdown requests and waits until the shutdown is complete
or stalled before shutting all the way down.

In order to do this, I had to convert the `serverless-sigterm`
module into a subclass of the `shutdown` plugin and exclude the
original shutdown module from the build due to limitations of
how Elasticsearch loads plugins.